--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "static-server": "^2.0.3"
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-minify-css": "^1.2.4"
   }
 }
